--- a/docs/task_planning/master05-model_overview.adoc
+++ b/docs/task_planning/master05-model_overview.adoc
@@ -1,5 +1,7 @@
 = Task Planning Model Overview
 
+This section and the following one describe the Task Planning model in technical detail. Most of the emphasis is on the 'definition' level of expression, with most details of the 'materialised' and 'runtime' expressions left to implementers. Throughout these sections, a version of the {openehr_tp_vml}[Task Planning Visual Modelling Language (TP-VML)^] is used to illustrate instance structures. This visual language is designed to be formally aligned to the semantics of the model.
+
 The following UML diagram shows the `rm.task_planning` package in overview form, showing the constituent packages, `definition`, `materialised`, and `history`. The first of these packages contains the class model for the _definition model_ expression of a Work Plan, i.e. the workflow structure intentionally designed to achive a goal.
 
 The `materialised` package contains the class model of the materialised form of the definition, which is created prior to its use in execution. The materialised model is presented in outline only, as a way of indicating some of the general features of the materialised form, and is not intended to be normative. (At some point in the future, a skeleton materialised model may be declared normative, based on implementation experience).
