--- a/docs/UML/classes/reminder.adoc
+++ b/docs/UML/classes/reminder.adoc
@@ -11,4 +11,11 @@ h|*Description*
 h|*Inherit*
 2+|`TIMER_WAIT`
 
+h|*Attributes*
+^h|*Signature*
+^h|*Meaning*
+
+h|*0..1*
+|*repeats*: `Integer`
+a|Default value of 0 means no repeats, i.e. one reminder Event is generated. A negative value means repeat forever.
 |===
