--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -7,9 +7,13 @@
 4+^h|*PROC Release 1.?.?*
 
 |[[latest_issue]]1.3.0
-|{spec_tickets}/SPECPROC-xx[SPECPROC-xx^]. Improve diagrams and explanation on Task wait states and Events.
-|T Beale
-|[[latest_issue_date]]07 Mar 2019
+|{spec_tickets}/SPECPROC-xx[SPECPROC-xx^]. Improve diagrams and explanation on Task wait states and Events; +
+ Add `EVENT_ACTION._custom_actions_`; +
+ Add `REMINDER._repeats_`; +
+ Add `TASK_WAIT._next_state_`
+|T Beale, +
+ B Naess
+|[[latest_issue_date]]11 Mar 2019
 
 |
 |{spec_tickets}/SPECPROC-xx[SPECPROC-xx^]. Improve model of capture and review data-sets. +
