--- a/docs/tp_vml/master02-overview.adoc
+++ b/docs/tp_vml/master02-overview.adoc
@@ -4,6 +4,7 @@
 
 The following files can be downloaded and then imported into draw.io as libraries to provide a working palette for TP-VML diagrams.
 
+* link:{doc_name}/draw.io-lib/TP_VML_plans.xml[TP_VML plans]
 * link:{doc_name}/draw.io-lib/TP_VML_groups.xml[TP_VML groups]
 * link:{doc_name}/draw.io-lib/TP_VML_tasks.xml[TP_VML tasks]
 * link:{doc_name}/draw.io-lib/TP_VML_events.xml[TP_VML events]
